more alignment fixes

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -57,16 +57,16 @@ header ul {
     width: 70%;
     margin-right: 1.5%;
 }
-.left-column div {
+/* .left-column div {
   height: 275px;
   width: 90%;
   overflow: hidden;
-}
+} */
 .left-column img {
   border: 20px solid white;
   border-bottom: 10px;
   height: 20%;
-  /* width: 90%; */
+  width: 90%;
 }
 .right-column {
     float: left;
@@ -75,15 +75,15 @@ header ul {
     margin-right: 1.5%;
 
 }
-.right-column div {
+/* .right-column div {
   height: 100px;
   width: 90%;
   overflow: hidden;
-}
+} */
 .right-column img {
   border-bottom: 10px;
-  height: 100px;
-  /* width: 90%; */
+  /* height: 10%; */
+  width: 90%;
 }
 
 
